--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -1,13 +1,11 @@
 services:
   smokeping:
-    image: lscr.io/linuxserver/smokeping:latest
-    container_name: smokeping
+    image: ubuntu:latest
+    container_name: test
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - SHARED_SECRET=password #optional
-      - CACHE_DIR=/tmp #optional
     volumes:
-      - ./smokeping_config:/test
+      - ./test.txt:/test.txt
     restart: unless-stopped
